bug fixes with overflow hidden

--- a/public/css/main-page.css
+++ b/public/css/main-page.css
@@ -63,7 +63,7 @@ section {
 .section-name:after {
     position: absolute;
     content: '';
-    width: 100%;
+    width: calc(100% - 224px);
     height: 3px;
     background: black;
     top: 50%;
